test/type_inference/negative/type_args1.output
type_args1.impala:5 col 35 - 38: error: wrong argument type; expected 'i32' but found 'bool'
